@@ -31,7 +31,9 @@ public class TestPlainTextDictionary extends LuceneTestCase {
     Directory ramDir = newDirectory();
     SpellChecker spellChecker = new SpellChecker(ramDir);
     spellChecker.indexDictionary(ptd, newIndexWriterConfig(null), false);
-    String[] similar = spellChecker.suggestSimilar("treeword", 2);
+    String[] similar = spellChecker.suggestSimilar("", 2);
+    assertEquals(0, similar.length);
+    similar = spellChecker.suggestSimilar("treeword", 2);
     assertEquals(2, similar.length);
     assertEquals(similar[0], "threeword");
     assertEquals(similar[1], "oneword");
